﻿alpha rc1 -> alpha rc2
# Added
-> Optional taper on each side of wave form
# Changed
-> Wave graphic window has adjustable size
-> FPS value is now at 120 and cannot be changed
# Fixed
-> Drawing update more stable; minimal lag
# Notes
-> Mp3 format still has distortions; fix is tentative